--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
       </header>
 
       <div class="search-results">
+        <a href="#5ed6604591c37cdc054bc886">Recipe 1</a>
+        <a href="#5ed6604591c37cdc054bcd09">Recipe 2</a>
         <ul class="results">
           <!-- 
           <li class="preview">
